# xfspp

./: .bettercodehub.yml  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  main.cpp
cen/320/: xfsadmin.h  xfsalm.h  xfsapi.h  xfsbcr.h  xfscam.h  xfscdm.h  xfsceu.h  xfschk.h  xfscim.h  xfsconf.h  xfscrd.h  xfsdep.h  xfsidc.h  xfsipm.h  xfspin.h  xfsptr.h  xfssiu.h  xfsspi.h  xfsspiptr.h  xfsttu.h  xfsvdm.h
cen/330/: xfsadmin.h  xfsalm.h  xfsapi.h  xfsbcr.h  xfscam.h  xfscdm.h  xfsceu.h  xfschk.h  xfscim.h  xfsconf.h  xfscrd.h  xfsdep.h  xfsidc.h  xfsipm.h  xfspin.h  xfsptr.h  xfssiu.h  xfsspi.h  xfsspiptr.h  xfsttu.h  xfsvdm.h
common/: version.cpp  version.hpp
log/: log.cpp  log.hpp
mgr/: CMakeLists.txt  main.cpp  mgr.def
sp/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  main.cpp  sp.def  task.cpp  task.hpp
sp/mgrtest/: CMakeLists.txt  main.cpp  mgrtest.def  mgrtest.h
tests/: CMakeLists.txt  catch.hpp  minhook.hpp
tests/mgr/: CMakeLists.txt  startup.cpp
tests/minhook/: CMakeLists.txt
tests/win32/: CMakeLists.txt  environment.cpp  handle.cpp  library.cpp  msgwnd.cpp  registry.cpp  shmem.cpp  string.cpp  synch.cpp  thread.cpp  timer.cpp  uuid.cpp
tests/xfs/: CMakeLists.txt  version.cpp  xfs_manager.cpp
util/: constraints.hpp  memory.hpp  methodscope.hpp  noexcept.hpp  operators.hpp  singleton.hpp  string.cpp  string.hpp
win32/: environment.cpp  environment.hpp  error.cpp  error.hpp  exception.cpp  exception.hpp  filesystem.cpp  filesystem.hpp  handle.cpp  handle.hpp  library.cpp  library.hpp  msgwnd.cpp  msgwnd.hpp  registry.cpp  registry.hpp  shmem.cpp  shmem.hpp  synch.cpp  synch.hpp  thread.cpp  thread.hpp  timer.cpp  timer.hpp  uuid.cpp  uuid.hpp
xfs/: allocator.cpp  allocator.hpp  exception.cpp  exception.hpp  registry.cpp  registry.hpp  version.cpp  version.hpp
